--- a/phonebook_final_frontend/Dockerfile
+++ b/phonebook_final_frontend/Dockerfile
@@ -1,9 +1,11 @@
-FROM openjdk:11.0-jdk-slim
+FROM gradle:jdk8 AS build
+COPY --chown=gradle:gradle . /home/gradle/src
+WORKDIR /home/gradle/src
+RUN gradle build --no-daemon
 
-ENV API_SERVER_PORT=9090
-ENV MANAGEMENT_SERVER_PORT=9091
-ENV JAVA_OPTS=""
-EXPOSE 9090 9091
-USER 1001
-COPY build/libs/phonebook_final_frontend-0.0.1-SNAPSHOT.jar phonebook_final_frontend-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java", "-XX:+UseContainerSupport", "-XX:MaxRAMPercentage=75", "-jar", "frontend-0.0.1-SNAPSHOT.jar"]
+FROM openjdk:8-jre-slim
+
+EXPOSE 8080 8081
+RUN mkdir /app
+COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
+ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
